@@ -9,7 +9,7 @@
  * @subpackage  Gutenberg\Blocks
  * @copyright   Copyright (c) 2022, WeCodeArt Framework
  * @since		5.1.8
- * @version		5.4.8
+ * @version		5.5.5
  */
 
 namespace WeCodeArt\Gutenberg\Blocks\Site;
@@ -88,8 +88,7 @@ class Login extends Dynamic {
 		}
 
 		// Queue block for assets.
-		$storage = Blocks::get_instance();
-		$storage::load( [ 'core/buttons', 'core/button' ] );
+		Blocks::get_instance()->load( [ 'core/buttons', 'core/button' ] );
 
 		return wecodeart( 'markup' )::wrap( 'wp-block-login', [
 			[
